# internal/infrastructure/persistence/queries/tracker.sql.go
@@ -1,0 +1,133 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.30.0
+// source: tracker.sql
+
+package queries
+
+import (
+	"context"
+	"encoding/json"
+)
+
+const getTracker = `-- name: GetTracker :one
+SELECT id, manga_id, chapter_id, is_read, metadata, updated_at, created_at
+FROM tracker WHERE manga_id = ? AND chapter_id = ?
+`
+
+type GetTrackerParams struct {
+	MangaID   string
+	ChapterID string
+}
+
+func (q *Queries) GetTracker(ctx context.Context, arg GetTrackerParams) (Tracker, error) {
+	row := q.db.QueryRowContext(ctx, getTracker, arg.MangaID, arg.ChapterID)
+	var i Tracker
+	err := row.Scan(
+		&i.ID,
+		&i.MangaID,
+		&i.ChapterID,
+		&i.IsRead,
+		&i.Metadata,
+		&i.UpdatedAt,
+		&i.CreatedAt,
+	)
+	return i, err
+}
+
+const getTrackersByManga = `-- name: GetTrackersByManga :many
+SELECT id, manga_id, chapter_id, is_read, metadata, updated_at, created_at
+FROM tracker WHERE manga_id = ?
+`
+
+func (q *Queries) GetTrackersByManga(ctx context.Context, mangaID string) ([]Tracker, error) {
+	rows, err := q.db.QueryContext(ctx, getTrackersByManga, mangaID)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []Tracker
+	for rows.Next() {
+		var i Tracker
+		if err := rows.Scan(
+			&i.ID,
+			&i.MangaID,
+			&i.ChapterID,
+			&i.IsRead,
+			&i.Metadata,
+			&i.UpdatedAt,
+			&i.CreatedAt,
+		); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
+
+const listTracker = `-- name: ListTracker :many
+SELECT id, manga_id, chapter_id, is_read, metadata, updated_at, created_at
+FROM tracker
+`
+
+func (q *Queries) ListTracker(ctx context.Context) ([]Tracker, error) {
+	rows, err := q.db.QueryContext(ctx, listTracker)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []Tracker
+	for rows.Next() {
+		var i Tracker
+		if err := rows.Scan(
+			&i.ID,
+			&i.MangaID,
+			&i.ChapterID,
+			&i.IsRead,
+			&i.Metadata,
+			&i.UpdatedAt,
+			&i.CreatedAt,
+		); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
+
+const upsertTracker = `-- name: UpsertTracker :exec
+INSERT INTO tracker (id, manga_id, chapter_id, is_read, metadata)
+VALUES (?, ?, ?, ?, ?)
+ON DUPLICATE KEY UPDATE is_read = VALUES(is_read), metadata = VALUES(metadata)
+`
+
+type UpsertTrackerParams struct {
+	ID        string
+	MangaID   string
+	ChapterID string
+	IsRead    bool
+	Metadata  json.RawMessage
+}
+
+func (q *Queries) UpsertTracker(ctx context.Context, arg UpsertTrackerParams) error {
+	_, err := q.db.ExecContext(ctx, upsertTracker,
+		arg.ID,
+		arg.MangaID,
+		arg.ChapterID,
+		arg.IsRead,
+		arg.Metadata,
+	)
+	return err
+}
